--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,22 @@
 #main-container{
-  max-width: 40em;
-  min-height: 30em;
-  background-color: aqua;
+  max-width: 10em;
+  min-height: 20em;
+ 
   margin: 0 auto;
-  font-size: 5em;
+  font-size: 5rem;
+}
+#display{
+  max-width:10em ;
+  min-height: 20em;
+  background-color: aqua;
 }
 #send-div{
-  max-width: 40em;
+  max-width: 50rem;
   height: 50px;
   background-color: red;
+ 
+  
+  bottom: 0;
   
  
 }
